--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -29,4 +29,4 @@ jobs:
         python -m pip install --upgrade pip
     - name: Build package
       run: |
-        python -m pip install .
+        python -m pip install --upgrade git+file://${GITHUB_WORKSPACE}
