--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -24,6 +24,12 @@ jobs:
       uses: actions/setup-python@v2
       with:
         python-version: ${{ matrix.python-version }}
+    - name: Install dependencies
+      run: |
+        mkdir -p build/Debug && cd build/Debug
+        cmake ../.. && cmake --build . --target 'aeron'
+        sudo make install
+        python -m pip install --upgrade pip
     - name: Build package
       run: |
         python -m pip install --upgrade git+file://${GITHUB_WORKSPACE}
