--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -27,10 +27,12 @@ jobs:
     - name: Install dependencies
       run: |
         git submodule update --init --recursive -q
-        mkdir -p build/Debug && cd build/Debug
-        cmake ../.. && cmake --build . --target 'aeron'
+        mkdir -p build/Debug
+        cd build/Debug
+        cmake ../..
+        cmake --build . --target 'aeron'
         sudo make install
-        python -m pip install --upgrade pip
+        python -m pip install --upgrade pip setuptools wheel
     - name: Build package
       run: |
         python -m pip install --upgrade git+file://${GITHUB_WORKSPACE}
