--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,14 +19,15 @@ jobs:
         python-version: ["3.8", "3.9", "3.10"]
 
     steps:
-    - uses: actions/checkout@v3
-    - name: Set up Python ${{ matrix.python-version }}
-      run: |
-        sudo add-apt-repository ppa:deadsnakes/ppa
-        sudo apt install python${{ matrix.python-version }}
-    - name: Install dependencies
-      run: |
-        python${{ matrix.python-version }} -m pip install --upgrade pip setuptools wheel
-    - name: Build package
-      run: |
-        python -m pip install --upgrade git+file://${GITHUB_WORKSPACE}
+      - uses: actions/checkout@v3
+      - name: Set up Python ${{ matrix.python-version }}
+        uses: actions/setup-python@v3
+        with:
+          python-version: ${{ matrix.python-version }}
+          architecture: x64
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip setuptools wheel
+      - name: Build package
+        run: |
+          python -m pip install --upgrade git+file://${GITHUB_WORKSPACE}
