--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,17 +6,11 @@ include_directories(/usr/local/include)
 
 set(SOURCE
         src/aeron/aeronmodule.c
-        src/aeron/BasicPublisher.c
-        src/aeron/BasicPublisher.h
-        src/aeron/BasicSubscriber.c
-        src/aeron/BasicSubscriber.h
-        src/aeron/exceptions.h
-        src/aeron/configuration.h
         src/aeron/__init__.pyi
         pyproject.toml
         setup.py
         setup.cfg
         MANIFEST.in
-        README.md src/aeron/exceptions.c)
+        README.md)
 
 add_library(_ EXCLUDE_FROM_ALL ${SOURCE})
