--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,7 +14,6 @@ jobs:
 
     runs-on: ubuntu-latest
     strategy:
-      fail-fast: false
       matrix:
         python-version: ["3.8", "3.9", "3.10"]
 
@@ -27,7 +26,7 @@ jobs:
           architecture: x64
       - name: Install dependencies
         run: |
-          python -m pip install --upgrade pip setuptools wheel
+          pip install --upgrade pip
       - name: Build package
         run: |
-          python -m pip install --upgrade git+file://${GITHUB_WORKSPACE}
+          pip install .
