Update build workflow

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,7 +24,15 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
           architecture: x64
-      - name: Install dependencies
+      - name: Install Aeron
+        run: |
+          git clone --branch 1.38.2 --depth 1 https://github.com/real-logic/aeron.git
+          mkdir --parents aeron/cppbuild/Debug
+          cd aeron/cppbuild/Debug
+          cmake -DCMAKE_BUILD_TYPE=Debug ../..
+          cmake --build . --clean-first
+          cmake --install .
+      - name: Upgrade pip
         run: |
           pip install --upgrade pip
       - name: Build package
