--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,7 +30,7 @@ jobs:
           mkdir --parents aeron/cppbuild/Debug
           cd aeron/cppbuild/Debug
           cmake -DCMAKE_BUILD_TYPE=Debug ../..
-          cmake --build . --clean-first
+          cmake --build . --clean-first --parallel 2
           sudo cmake --install .
       - name: Upgrade pip
         run: |
