--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,7 +14,6 @@ jobs:
 
     runs-on: ubuntu-latest
     strategy:
-      fail-fast: false
       matrix:
         python-version: ["3.8", "3.9", "3.10"]
 
@@ -25,9 +24,17 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
           architecture: x64
-      - name: Install dependencies
+      - name: Install Aeron
         run: |
-          python -m pip install --upgrade pip setuptools wheel
+          git clone --branch 1.38.2 --depth 1 https://github.com/real-logic/aeron.git
+          mkdir --parents aeron/cppbuild/Debug
+          cd aeron/cppbuild/Debug
+          cmake -DCMAKE_BUILD_TYPE=Debug ../..
+          cmake --build . --clean-first --parallel 2
+          sudo cmake --install .
+      - name: Upgrade pip
+        run: |
+          pip install --upgrade pip
       - name: Build package
         run: |
-          python -m pip install --upgrade git+file://${GITHUB_WORKSPACE}
+          pip install .
